# pink-trombone-rust

./: .gitignore  Cargo.toml  Makefile  README.md  glottis0.schema.json  glottis1.json  glottis1_pl.plist  test_data.json  tract-shaper.schema.json  tract.schema.json  tract0.json  tract_shape0.json  trombone.schema.json  trombone0.json  trombone0_2.json  trombone0_2_pl.plist  trombone0_3.json  trombone0_3_pl.plist  trombone0_4.json  trombone0_4_pl.plist  trombone0_5.json  trombone0_5_pl.plist  trombone0_6.json  trombone0_6_pl.plist  trombone0_7.json  trombone0_7_pl.plist  trombone0_pl.plist
examples/: pink-trombone.rs
src/: glottis.rs  lib.rs  noise.rs  noise_gen.rs  tract.rs  tract_shaper.rs  transient.rs  trombone.rs  turbulence.rs
