[package]
name = "pink-trombone"
version = "0.2.1"
edition = "2018"
readme = "README.md"
authors = ["Neil Thapen", "Victor Nova <lostfreeman@gmail.com>"]
description = "Vocal cords simulator"
keywords = ["voice"]
categories = ["multimedia::audio", "simulation"]
license = "MIT"
repository = "https://github.com/lostmsu/pink-trombone"

[dependencies]
rand = "0.8.4"
serde_json = "1.0.72"
serde = { version = "1.0.131", features = ["derive"] }
serde-big-array = "0.4.1"

[dev-dependencies]
rodio = "0.14.0"
